# watchtower

./: .gitignore  CHANGELOG.md  README.md  biome.json  index.html  migrate_routes.py  package.json  pnpm-lock.yaml  vite.config.ts
.agent/: README.md
.agent/workflows/: ROADMAP.md  backend-fe-strategy.md
.cursor/: README.md
.github/workflows/: release.yml
.husky/: pre-commit
.serena/: .gitignore  project.yml
.serena/memories/: codebase_structure.md  project_overview.md  style_and_conventions.md  suggested_commands.md
docs/: README.md  ROADMAP.md  TODO.md  backend-fe-strategy.md
docs/architecture/: 01-project-overview.md  02-backend-overview.md  03-frontend-overview.md  04-domains.md  07-apis.md  (+4 more)
scripts/: bump-version.mjs
src/: global.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: setup.html
src-tauri/src/: lib.rs  logging.rs  main.rs
src-tauri/src/command/: api_log_commands.rs  api_mock_commands.rs  api_schema_commands.rs  api_test_commands.rs  domain_commands.rs  domain_group_commands.rs  domain_monitor_command.rs  domain_status_command.rs  local_route_commands.rs  settings_commands.rs  window_commands.rs
src-tauri/src/model/: api_log.rs  api_mock.rs  api_response.rs  api_schema.rs  api_test_case.rs  domain.rs  domain_api_logging_link.rs  domain_group.rs  domain_group_link.rs  domain_monitor_link.rs  domain_status.rs  domain_status_log.rs  local_route.rs  mod.rs  proxy_settings.rs  settings_export.rs
src-tauri/src/service/: api_log_service.rs  api_logging_settings_service.rs  api_mock_service.rs  api_schema_service.rs  api_test_case_service.rs  ca_service.rs  domain_group_link_service.rs  domain_group_service.rs  domain_monitor_service.rs  domain_service.rs  domain_status_service.rs  local_proxy.rs  local_route_service.rs  proxy_settings_service.rs  system_proxy_service.rs
src-tauri/src/storage/: migration.rs  mod.rs  versioned.rs
(+172 files in other folders)
