[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Tauri API constraints
needless_pass_by_value = "allow"
unnecessary_wraps = "allow"
# Refactor/design - allow for now
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
type_complexity = "allow"
cast_possible_truncation = "allow"
similar_names = "allow"
unused_async = "allow"

[package]
name = "watchtower"
version = "1.3.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "watchtower_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
axum = { version = "0.7", features = ["macros"] }
hyper = "1"
hyper-util = { version = "0.1", features = ["client-legacy", "service"] }
hickory-resolver = { version = "0.25", features = ["tokio"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1.11"
tokio-rustls = "0.26"
rcgen = "0.13"
time = "0.3"

[dev-dependencies]
tempfile = "3"
